Add containers to POS
